<resources>
    <string name="app_name">MyCheckList</string>
    <string name="welcome_text"> Hello, and welcome to "My Check List"!</string>
    <string name="small_bonus_text">We can help you to get more productive</string>
    <string name="register">Make a registration</string>
    <string name="already_registered">You have an account already? Click here.</string>
    <string name="user_name_hint">Enter your user name</string>
    <string name="user_email_hint">Enter your email address</string>
    <string name="user_pass_hint">Enter your password</string>
    <string name="user_pass_rep_hint">Enter your password again</string>
    <string name="log_in">Log in</string>
    <string name="reset_password">Reset password?</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="open_navigation">Open</string>
    <string name="close_navigation">Close</string>
    <string name="first_item">First Item</string>
    <string name="second_item">Second Item</string>
    <string name="third_item">Third Item</string>
    <string name="my_tasks">My Tasks</string>
    <string name="to_do">To Do</string>
    <string name="important_tasks">Important Tasks</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="others">others</string>
    <string name="log_out">Log out</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email address</string>
    <string name="profile_picture">Профилна снимка</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">niurwabfiwabivbeurivbesivbuipsevbueipsvbueipbvispufdbvifpsuvbifdspvbifdpbvifdpvbifdpsbvfipbvipfdsvbipfdusbvfidup</string>
    <string name="task_category">Task Category:</string>
    <string name="due_to">Due To:</string>
    <string name="due_to_date">13.11.2022</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account click here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
</resources>