<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_700"
    android:padding="20dp">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="@id/profileImage"
        app:layout_constraintTop_toTopOf="@id/profileImage"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintStart_toEndOf="@id/profileImage" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/email_address"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter" />
</androidx.constraintlayout.widget.ConstraintLayout>