<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">
    <!--    android:layout_gravity="center_horizontal"-->
    <!--    android:background="@drawable/background"-->
    <!--    android:orientation="horizontal"-->


    <!--    <TextView-->
    <!--        android:id="@+id/signuptitle"-->
    <!--        android:layout_width="118dp"-->
    <!--        android:layout_height="41dp"-->
    <!--        android:layout_margin="15dp"-->
    <!--        android:gravity="center"-->
    <!--        android:text="Sign up"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="25dp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/password"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.259" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/username"-->
    <!--        android:layout_width="302dp"-->
    <!--        android:layout_height="53dp"-->
    <!--        android:layout_below="@id/signuptitle"-->
    <!--        android:background="#30ffffff"-->
    <!--        android:drawableLeft="@drawable/ic_username"-->
    <!--        android:drawablePadding="10dp"-->
    <!--        android:hint="Username"-->
    <!--        android:padding="15dp"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textColorHint="@color/white"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.495"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.179" />-->

    <!--    <Button-->
    <!--        android:id="@+id/regButon"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Button"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.585" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/email"-->
    <!--        android:layout_width="302dp"-->
    <!--        android:layout_height="53dp"-->
    <!--        android:layout_below="@id/username"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:background="#30ffffff"-->
    <!--        android:drawableLeft="@drawable/ic_email"-->
    <!--        android:drawablePadding="10dp"-->
    <!--        android:hint="Email"-->
    <!--        android:padding="15dp"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textColorHint="@color/white"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.495"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.256" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/password"-->
    <!--        android:layout_width="302dp"-->
    <!--        android:layout_height="53dp"-->
    <!--        android:layout_below="@id/email"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:background="#30ffffff"-->
    <!--        android:drawableLeft="@drawable/ic_password"-->
    <!--        android:drawablePadding="10dp"-->
    <!--        android:hint="Password"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:padding="15dp"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textColorHint="@color/white"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.495"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.343" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/repassword"-->
    <!--        android:layout_width="302dp"-->
    <!--        android:layout_height="53dp"-->
    <!--        android:layout_below="@id/password"-->
    <!--        android:background="#30ffffff"-->
    <!--        android:drawableLeft="@drawable/ic_password"-->
    <!--        android:drawablePadding="10dp"-->
    <!--        android:hint="Re-Password"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:padding="15dp"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textColorHint="@color/white"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/regButon"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.495"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
    <!--        app:layout_constraintVertical_bias="0.22" />-->

    <!--- <TextView-->
    <!---  android:id="@+id/alreadyRegistered"-->
    <!--        android:layout_width="249dp"-->
    <!--        android:layout_height="21dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:text="@string/already_registered"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textColor="#fcfcf1"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/regButon"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->


    <RelativeLayout
        android:id="@+id/frameLayoutLogo"
        android:layout_width="410dp"
        android:layout_height="146dp"
        android:layout_marginBottom="584dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logotxt" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/colorLayoutRight"
        android:layout_width="410dp"
        android:layout_marginStart="200dp"
        android:layout_height="480dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/shape_login_right_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayoutLogo"/>



    <!--    <LinearLayout-->
    <!--        android:id="@+id/loginPanel"-->
    <!--        android:layout_width="330dp"-->
    <!--        android:layout_height="380dp"-->
    <!--        android:background="@drawable/shadow_center3"-->
    <!--                -->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/frameLayoutLogo"-->
    <!--        android:paddingTop="30dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:paddingLeft="50dp"-->
    <!--        android:paddingRight="50dp"-->

    <!--        android:orientation="vertical">-->

    <!--        <EditText android:hint="Username"-->
    <!--            android:id="@+id/regUsername"-->
    <!--            android:layout_marginStart="10dp"-->
    <!--            android:layout_marginEnd="10dp"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="60dp"/>-->

    <!--        <EditText android:hint="Email"-->
    <!--            android:id="@+id/regEmail"-->
    <!--            android:layout_marginStart="30dp"-->
    <!--            android:layout_marginEnd="30dp"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="60dp"/>-->

    <!--        <EditText android:hint="Password"-->
    <!--            android:id="@+id/regPass"-->
    <!--            android:layout_marginStart="30dp"-->
    <!--            android:layout_marginEnd="30dp"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="60dp"/>-->

    <!--        <EditText android:hint="Confirm Password"-->
    <!--            android:id="@+id/regConfPass"-->
    <!--            android:layout_marginStart="30dp"-->
    <!--            android:layout_marginEnd="30dp"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="60dp"/>-->

    <!--    </LinearLayout>-->


    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutLogo">

        <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="370dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="60dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="249dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="30dp"
                android:ems="20"
                android:inputType="textPersonName"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/regEmail"
                android:layout_width="249dp"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/regPass"
                android:layout_width="249dp"
                android:layout_height="60dp"
                android:layout_marginTop="170dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="30dp"
                android:ems="20"
                android:text="@string/password" />
            <!--                android:inputType="textPassword"-->


            <EditText
                android:id="@+id/loginEmail2"
                android:layout_width="249dp"
                android:layout_height="60dp"
                android:layout_marginTop="240dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="30dp"
                android:ems="20"
                android:inputType="textVisiblePassword"
                android:text="@string/conform_password" />


            <TextView
                android:id="@+id/loginForgotPass"
                android:layout_marginTop="310dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="40dp"
                android:text="@string/already_registered"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/regButon"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="-14dp"
        android:background="@drawable/shape_login_button"
        android:text="Login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/loginPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView  android:id="@+id/loginLogInTxt"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/frameLayoutLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"/>

    <TextView  android:id="@+id/loginSignUpTxt"
        android:textSize="20sp"
        android:gravity="right"
        android:layout_marginRight="60dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/frameLayoutLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Sign Up"/>



</androidx.constraintlayout.widget.ConstraintLayout>